--- a/src/app/mini-app/mini-app.sass
+++ b/src/app/mini-app/mini-app.sass
@@ -1,7 +1,6 @@
 :host
     display: block
     width: 100%
-    // TODO remove later
 
 .mini-item-content
     background-color: white
@@ -22,6 +21,3 @@
 .app-name
     text-align: center
     font-size: 5px
-
-img
-    height: 25px
